--- a/index.html
+++ b/index.html
@@ -2,62 +2,13 @@
 <html lang="en">
 
 <head>
-    <title> SEX </title>
+    <title> example </title>
     <link rel="stylesheet" href="styles.css">
     
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="categories.html">Categories</a></li>
-                <li class="mobile"><a href="pornStars.html">Porn Stars</a></li>
-                <li class="mobile"><a href="recommendedVideos.html">recommendedVideos</a></li>
-                <li class="logo"><a href="index.html">Home Logo</a></li>
-                <li class="desktop"><a href="pornStars.html">Porn Stars</a></li>
-                <li class="desktop"><a href="recommendedVideos.html">recommendedVideos</a></li>
-            </ul>
-        </nav>
-    </header>
-    <section class="features">
-        <figure>
-            <video width="640" height="360" controls>
-                <source
-                    src="Porn Stars/FAMILYXXX_-_Tied_Up_Step-Daughter_Has_Been_Waiting_For_Daddy_s_Creampie_All_Day_3.mp4"
-                    type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-        </figure>
-    </section>
-
-    <section class="features">
-        <figure>
-            <a href="https://www.pornhub.com/view_video.php?viewkey=ph5889ac9d0acc7" target="_blank">
-
-                <img src="Porn Stars/Eva Lovia.jpg" alt="porn star">
-            </a>
-            <figcaption>Eva Lovia</figcaption>
-        </figure>
-
-        <figure>
-            <a href="https://www.pornhub.com/view_video.php?viewkey=63ebc57ce1a7e" target="_blank">
-                <img src="Porn Stars/Kimmy Granger.jpg" alt="porn star">
-            </a>
-            <figcaption>kimmy Granger</figcaption>
-        </figure>
-
-        <figure>
-            <img src="Porn Stars/Mia Malkova.jpg" alt="porn star">
-
-            <figcaption>Mia Malkova</figcaption>
-        </figure>
-
-    </section>
-
-    <footer>Personal Porn Website Created by ME </footer>
-    <script src="main.js"></script>
+   
 </body>
 
 </html>
